Update cover info

--- a/components/info.tex
+++ b/components/info.tex
@@ -3,20 +3,21 @@
 % This file is used by MAIN.TEX
 
 % set title, authors and stuff for the cover
-\def\university{Technische Universit{\"a}t M{\"u}nchen}
-\def\universityLogo{styles/tum_logo}
-\def\program{Computational Science and Engineering \\(International Master's Program)}
-\def\programLogo{styles/cse_logo}
+\def\university{Universidad de Los Andes}
+\def\universityLogo{styles/uniandes-logo}
+\def\program{Master of Information Engineering}
+%% \def\programLogo{styles/uniandes-logo}
 \def\doctype{Master's Thesis}
 
-\def\title{My Ticket to a Masters Degree}
-\def\author{Your Name Here}
-\def\examinerOne{Univ.-Prof.\ Dr.\ Qui-Gon Jinn}
-\def\examinerTwo{Univ.-Prof.\ Dr.\ Obi-Wan Kenobi}
-\def\assistantAdvisor{Dr.\ rer.\ nat.\ Anakin Skywalker}
-\def\date{April 1st, 2222}
+\def\title{Network Aware Elastic Key-Splitting in \\
+Distributed Stream Processing Systems}
+\def\author{Diva Mercedes Martínez Laverde}
+\def\examinerOne{ToFind}
+\def\examinerTwo{ToFind}
+\def\assistantAdvisor{Nicolás Cardozo Álvarez Ph.D.}
+\def\date{June 2019}
 
-\def\keywords{{keyword1}, {keyword2}, {keyword3}}
+\def\keywords{{stream-processing}}
 
 % The following are used for the PDF metadata, by default the same as above.
 \def\metaTitle{\title}
