--- a/components/cover.tex
+++ b/components/cover.tex
@@ -14,20 +14,20 @@
 
 \vspace{4cm}
 \begin{center}
-	\includegraphics[width=4cm]{\universityLogo}\\
-	\vspace{5mm}
-	\huge \program \\
-	\vspace{0.5cm}
-	\large \university
+ %% \includegraphics[width=4cm]{\universityLogo}\\
+ \vspace{5mm}
+ \huge \program \\
+ \vspace{0.5cm}
+ \large \university
 \end{center}
 
 \vspace{20mm}
 \begin{center}
-	{\Large \doctype}\\
-	\vspace{20mm}
-	{\huge \textbf \title}\\
-	\vspace{15mm}
-	{\LARGE  \author}\\
-	\vspace{\fill}
-	\includegraphics[width=4cm]{\programLogo}
+    {\Large \doctype}\\
+    \vspace{20mm}
+    {\huge \textbf \title}\\
+    \vspace{15mm}
+    {\LARGE  \author}\\
+    \vspace{\fill}
+    \includegraphics[width=4cm]{\universityLogo}
 \end{center}
