--- a/components/titlepage.tex
+++ b/components/titlepage.tex
@@ -38,7 +38,7 @@
     \end{tabular}
 
     \vspace{\fill}
-    \includegraphics[width=4cm]{\programLogo}
+    %% \includegraphics[width=4cm]{\programLogo}
 \end{center}
 
 % undo BCOR correction
