Change default colors

--- a/components/settings.tex
+++ b/components/settings.tex
@@ -153,11 +153,11 @@
 \definecolor{Pantone542}{HTML}{64A0C8}  % TUM accent light blue
 
 % Color for the hyperlinks (e.g. table of contents)
-\def\colorLinks{Pantone300C}
+\def\colorLinks{MidnightBlue}
 % Color for the web links
-\def\colorUrl{Pantone542}
+\def\colorUrl{MidnightBlue}
 % Color for the citations
-\def\colorCitations{Pantone158}
+\def\colorCitations{MidnightBlue}
 
 %--------------------------------------------------
 % PDF output
