--- a/components/text.tex
+++ b/components/text.tex
@@ -3,43 +3,8 @@
 % Put your content in here or include it by using \input (\include won't work)
 
 \addtolength{\evensidemargin}{-12mm}
-
-% ---------------------------------------------------------------------------
-%
-%Introduction and Background Theory
-%
-% ---------------------------------------------------------------------------
-\part[Introduction and Background Theory]{Introduction and Background Theory}
-\label{part:introAndBackgroundTheory}
-\input{chapters/Introduction}
-
-%
-%% ---------------------------------------------------------------------------
-%%
-%% Thesis content: What did you do?
-%%
-%%% ---------------------------------------------------------------------------
-\part[Body: What was done for the thesis]{Body: What Was Done for the Thesis}
-\label{part:body}
-
-%% ---------------------------------------------------------------------------
-%%
-%% Results and Conclusion
-%%
-%% ---------------------------------------------------------------------------
-\part[Results and Conclusion]{Results and Conclusion}
-\label{part:resultsAndConclusion}
-
-
-% ---------------------------------------------------------------------------
-%
-% Appendix
-%
-% ---------------------------------------------------------------------------
-\part*{Appendix}
-\phantomsection
-\addcontentsline{toc}{part}{Appendix}
-
-\appendix %---------------------------------------
-
-\input{chapters/Appendix}
+\input{chapters/introduction}
+\input{chapters/preliminaries}
+\input{chapters/motivation}
+\input{chapters/related_work}
+\input{chapters/solution}
