--- a/components/info.tex
+++ b/components/info.tex
@@ -9,8 +9,7 @@
 %% \def\programLogo{styles/uniandes-logo}
 \def\doctype{Master's Thesis}
 
-\def\title{Network Aware Elastic Key-Splitting in \\
-Distributed Stream Processing Systems}
+\def\title{Network Aware Elastic Key-Splitting in Distributed Stream Processing Systems}
 \def\author{Diva Mercedes Martínez Laverde}
 \def\examinerOne{ToFind}
 \def\examinerTwo{ToFind}
