--- a/components/settings.tex
+++ b/components/settings.tex
@@ -22,6 +22,8 @@
 
 % Conditional commands in LaTeX documents, used for the \clearemptydoublepage.
 \usepackage{ifthen}
+%% \newboolean{twoside}
+%% \setboolean{twoside}{false}
 
 % Typeset text in multiple columns (optional)
 % \usepackage{multicol}
