--- a/main.tex
+++ b/main.tex
@@ -31,9 +31,11 @@
               a4paper,
               index=totoc,
               headsepline,
-              footsepline,
+              parskip=half,
+              %% footsepline,
               BCOR=12mm,
               DIV=13,
+              %% twoside=false,
               bibliography=totoc]{scrbook}
 
 % KOMA scrbook options:
