add preliminaries bibliography

--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -1,54 +1,3 @@
-@misc{latex,
-  title =        {the not so short introduction to LaTeX: or LaTeX in 157
-                  minutes},
-  url =          {https://tobi.oetiker.ch/lshort/lshort.pdf},
-  author =       {tobias oetiker}
-}
-
-@Inbook{Chakravarthy2009,
-  author =       "Chakravarthy, Sharma and Jiang, Qingchun",
-  title =        "OVERVIEW OF DATA STREAM PROCESSING",
-  bookTitle =    "Stream Data Processing: A Quality of Service Perspective:
-                  Modeling, Scheduling, Load Shedding, and Complex Event
-                  Processing",
-  year =         "2009",
-  publisher =    "Springer US",
-  address =      "Boston, MA",
-  pages =        "9--21",
-  abstract =     "Informally, a data stream is defined as an unbounded (or
-                  never-ending) sequence of data items that are usually ordered
-                  either explicitly by a timestamp or by the values of one or
-                  more data elements (e.g., packet sequence identifier in an IP
-                  session). It is assumed that the format of a data stream is
-                  known in terms of its data elements and their
-                  types. Simplistically, a data item of a data stream can be
-                  viewed as a tuple1 of a relation. Correspondingly, a data
-                  element of a data item is analogous to an attribute of a
-                  relation.",
-  isbn =         "978-0-387-71003-7",
-  doi =          "10.1007/978-0-387-71003-7_2",
-  url =          "https://doi.org/10.1007/978-0-387-71003-7_2"
-}
-
-@article{kamburugamuve2013survey,
-  title =        {Survey of distributed stream processing for large stream
-                  sources},
-  author =       {Kamburugamuve, Supun and Fox, Geoffrey and Leake, David and
-                  Qiu, Judy},
-  journal =      {Grids. Ucs. Indiana. Edu},
-  year =         {2013}
-}
-
-@inproceedings{schneider2013tutorial,
-  title =        {Tutorial: stream processing optimizations},
-  author =       {Schneider, Scott and Hirzel, Martin and Gedik, Bu{\u{g}}ra},
-  booktitle =    {Proceedings of the 7th ACM international conference on
-                  Distributed event-based systems},
-  pages =        {249--258},
-  year =         {2013},
-  organization = {ACM}
-}
-
 @book{chakravarthy2009stream,
  author = {Chakravarthy, Sharma},
  title = {Stream data processing : a quality of service perspective : modeling, scheduling, load shedding, and complex event processing},
@@ -56,6 +5,59 @@
  year = {2009},
  address = {New York},
  isbn = {9780387710020}
+}
+
+@article{Hirzel_2014,
+ author = {Hirzel, Martin and Soul{\'{e}}, Robert and Schneider, Scott and Gedik, Bu{\u{g}}ra and Grimm, Robert},
+ title = {A catalog of stream processing optimizations},
+ journal = {{ACM} Computing Surveys},
+ publisher = {Association for Computing Machinery ({ACM})},
+ year = {2014},
+ month = {mar},
+ number = {4},
+ volume = {46},
+ pages = {1--34},
+ url = {https://doi.org/10.1145%2F2528412},
+ doi = {10.1145/2528412}
+}
+
+@article{kamburugamuve2013survey,
+ author = {Kamburugamuve, Supun and Fox, Geoffrey and Leake, David and Qiu, Judy},
+ title = {Survey of distributed stream processing for large stream sources},
+ journal = {Grids Ucs Indiana Edu},
+ year = {2013},
+ volume = {2},
+ pages = {1--16}
+}
+
+@inproceedings{KottoKombi2015ParallelAD,
+ author = {Kotto-Kombi, Roland and Lumineau, Nicolas and Lamarre, Philippe and Caniou, Yves},
+ title = {Parallel and Distributed Stream Processing: Systems Classification and Specific Issues},
+ year = {2015}
+}
+
+@article{R_ger_2019,
+ author = {Röger, Henriette and Mayer, Ruben},
+ title = {A Comprehensive Survey on Parallelization and Elasticity in Stream Processing},
+ journal = {{ACM} Computing Surveys},
+ publisher = {Association for Computing Machinery ({ACM})},
+ year = {2019},
+ month = {apr},
+ number = {2},
+ volume = {52},
+ pages = {1--37},
+ url = {https://doi.org/10.1145%2F3303849},
+ doi = {10.1145/3303849}
+}
+
+@inproceedings{Schneider_2013,
+ author = {Schneider, Scott and Hirzel, Martin and Gedik, Bu{\u{g}}ra},
+ title = {Tutorial},
+ publisher = {{ACM} Press},
+ year = {2013},
+ url = {https://doi.org/10.1145%2F2488222.2488268},
+ doi = {10.1145/2488222.2488268},
+ booktitle = {Proceedings of the 7th {ACM} international conference on Distributed event-based systems - {DEBS} {\textquotesingle}13}
 }
 
 
