--- a/components/settings.tex
+++ b/components/settings.tex
@@ -47,7 +47,9 @@
 %--------------------------------------------------
 
 % Set the bibliography style (default: plain)
-\bibliographystyle{plain}
+\usepackage{apacite}
+%% \bibliographystyle{plain}
+\bibliographystyle{apacite}
 
 % Special biblography package (nice to have)
 % \usepackage{natbib}
