include fancyref as a dependency

--- a/components/settings.tex
+++ b/components/settings.tex
@@ -192,4 +192,7 @@
 %--------------------------------------------------
 
 % Define commands that appear not to eat spaces (optional)
+
+\usepackage[plain]{fancyref}
+
 \usepackage{xspace}
