--- a/components/commands.tex
+++ b/components/commands.tex
@@ -19,6 +19,7 @@
 %\newcommand{\angle}[1]{ \left\langle  #1 \right\rangle }
 
 % some abreviations ------------------------------------------
+\newcommand{\figwidth}{0.7}
 \newcommand{\Reg}{$^{\textregistered}$}
 \newcommand{\reg}{$^{\textregistered}$ }
 \newcommand{\Tm}{\texttrademark}
@@ -57,3 +58,11 @@
              {\clearpage}}
 
 \newcommand{\etAl}{\emph{et al.}\mbox{ }}
+
+% fancyref commands
+\newcommand*{\fancyreflistingprefix}{lst}
+\newcommand*{\fancyrefsubsectionprefix}{subsec}
+\frefformat{plain}{\fancyreflistingprefix}{listing\fancyrefdefaultspacing#1}
+\Frefformat{plain}{\fancyreflistingprefix}{Listing\fancyrefdefaultspacing#1}
+\frefformat{plain}{\fancyrefsubsectionprefix}{subsection\fancyrefdefaultspacing#1}
+\Frefformat{plain}{\fancyrefsubsectionprefix}{Subsection\fancyrefdefaultspacing#1}
